classDiagram
    class Owner {
        - name
        - available_minutes
        - preferences
        - pets
        + add_pet(pet)
        + remove_pet(pet_name)
        + get_pet(pet_name)
        + update_available_time(minutes)
        + set_preference(key, value)
        + get_all_tasks()
    }

    class Pet {
        - name
        - species
        - breed
        - age
        - tasks
        + add_task(task)
        + remove_task(task_title)
        + edit_task(task_title, updated_task)
        + get_tasks()
    }

    class Task {
        - title
        - category
        - duration
        - priority
        - preferred_time
        - required
        - recurring
        - frequency
        - completed
        - notes
        - due_date
        + mark_complete()
        + create_next_occurrence()
        + mark_incomplete()
        + update_priority(priority)
        + matches_preference(preferences)
    }

    class Scheduler {
        - owner
        - selected_tasks
        - skipped_tasks
        - conflicts
        - total_time_used
        + parse_preferred_time(preferred_time)
        + filter_tasks(tasks, preferences)
        + prioritize_tasks(tasks)
        + sort_tasks(tasks)
        + sort_by_time(tasks)
        + filter_tasks_by_status(tasks, completed)
        + filter_tasks_by_pet_name(owner, pet_name)
        + should_schedule(task)
        + resolve_conflicts(tasks)
        + complete_task(owner, pet_name, task_title)
        + build_daily_plan(owner)
        + explain_plan(selected_tasks, skipped_tasks)
        + detect_conflicts(tasks)
    }

    Owner "1" o-- "*" Pet : owns
    Pet "1" o-- "*" Task : has
    Scheduler ..> Task : uses
    Scheduler ..> Owner : schedules for
